# atbfetcher

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yml
data/: Suspect_scheme_contaminations.csv
docs/: download_sources.md
src/atbfetcher/: __init__.py  cli.py  download.py  metadata.py  mlst.py  plotting.py  quality.py  query.py  sampling.py  species.py
src/refseqfetcher/: __init__.py  cli.py  fetch.py
tests/: conftest.py  test_cli.py  test_download.py  test_metadata.py  test_mlst.py  test_quality.py  test_query.py  test_refseqfetcher.py  test_sampling.py  test_species.py
