[project]
name = "atbfetcher"
version = "0.1.0"
description = "Fetch genomes from AllTheBacteria and RefSeq for benchmark datasets"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nabil-Fareed Alikhan" }]
readme = "README.md"
dependencies = [
    "click>=8.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.60",
    "requests>=2.28",
    "pyarrow>=14.0",
    "rich>=13.0",
]

[project.scripts]
atbfetcher = "atbfetcher.cli:main"
refseqfetcher = "refseqfetcher.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/atbfetcher", "src/refseqfetcher"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.10"
ncbi-datasets-cli = "*"

[tool.pixi.pypi-dependencies]
atbfetcher = { path = ".", editable = true }

[tool.pixi.feature.test.dependencies]
pytest = ">=7.0"
pytest-cov = "*"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]
test = { cmd = "pytest tests/ -v" }

[tool.pytest.ini_options]
testpaths = ["tests"]
