[project]
name = "atbfetcher"
version = "0.1.0"
description = "Fetch genomes from AllTheBacteria and RefSeq for benchmark datasets"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nabil-Fareed Alikhan", email = "nabil@happykhan.com" }]
readme = "README.md"
keywords = ["bioinformatics", "genomics", "bacteria", "assembly", "benchmark", "allthebacteria"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.60",
    "requests>=2.28",
    "pyarrow>=14.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/happykhan/atbfetcher"
Repository = "https://github.com/happykhan/atbfetcher"
Issues = "https://github.com/happykhan/atbfetcher/issues"

[project.scripts]
atbfetcher = "atbfetcher.cli:main"
refseqfetcher = "refseqfetcher.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/atbfetcher", "src/refseqfetcher"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.10"
ncbi-datasets-cli = "*"

[tool.pixi.pypi-dependencies]
atbfetcher = { path = ".", editable = true }

[tool.pixi.feature.test.dependencies]
pytest = ">=7.0"
pytest-cov = "*"

[tool.pixi.feature.lint.dependencies]
ruff = ">=0.4"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
lint = { features = ["lint"], solve-group = "default" }

[tool.pixi.tasks]
test = { cmd = "pytest tests/ -v" }
lint = { cmd = "ruff check src/ tests/" }
format = { cmd = "ruff format src/ tests/" }
format-check = { cmd = "ruff format --check src/ tests/" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator suggestion (less readable for multi-line)
]

[tool.ruff.lint.isort]
known-first-party = ["atbfetcher", "refseqfetcher"]
